--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cors": "~2.2.0",
     "express": "~4.0.0",
     "fh-mbaas-api": "5.13.1",
-    "request": "~2.40.0"
+    "request": "~2.40.0",
+    "sinon": "^1.17.4"
   },
   "devDependencies": {
     "grunt-concurrent": "latest",
